Added an option for scheduled backups to terminate an existing backup to the same destination, rather than being blocked by it.
Under Webmin versions 1.780 and above, use /var/webmin for logs and data files instead of /etc/webmin.
---- Changes since 4.18 ----
Updated the Piwik script installer to version 2.14.3, Wordpress to 4.3, phpMyFAQ to 2.8.24, FengOffice to 3.3, Dolibarr to 3.7.2 and 3.6.4, MediaWiki to 1.25.2, Coppermine to 1.5.38, Magento to 1.9.2.1, Dokuwiki to 2015-08-10a, SugarCRM to 6.5.22, ownCloud to 8.1.1, Drupal to 7.39 and 6.37, Django to 1.4.22, Trac to 1.0.8 and 0.12.7, FosWiki to 2.0.1, CMS Made Simple to 1.12.1, Typo3 to 6.2.15, Ghost to 0.7.0, Joomla to 3.4.4, and phpMyAdmin to 4.4.14.1.
MX records for a domain can be pointed to a cloud mail filtering provider on the Email Options page, or using the modify-mail API command.
Added the rename-domain API command, to allow changing the domain name, username or home directory of a virtual server from the command line.
---- Changes since 4.19 ----
Removed support for Apache versions older than 2.0.
Backup logs are now associated with the scheduled backup that created them, and are linked in the UI.
The Excluded Directories page can now also be used to enter MySQL and PostgreSQL databases and tables to exclude from backups.
The paths to additional PHP versions can now be entered on the Virtualmin Configuration page, under PHP Options. This also makes it possible to run PHP version 7.
Added a tab to the Manage SSL Certificate page to request a certificate from the free Let's Encrypt service.
---- Changes since 5.00 ----
Updated the WordPress script installer to version 4.4.1, Moodle to 3.0.2 and 2.9.4, Drupal to 8.0.2, eGroupware to 14.3.20160113, TikiWiki to 14.2, 12.5 and 6.15, and Typo3 to 6.2.17.