@@ -36,3 +36,6 @@ if ($info) {
 
 # Update DB of per-user last login times
 &update_last_login_times();
+
+# For any domains that are due for a let's encrypt cert renewal, do it now
+&apply_letsencrypt_cert_renewals();
