@@ -1510,3 +1510,4 @@ The paths to additional PHP versions can now be entered on the Virtualmin Config
 Added a tab to the Manage SSL Certificate page to request a certificate from the free Let's Encrypt service.
 ---- Changes since 5.00 ----
 Updated the WordPress script installer to version 4.4.1, Moodle to 3.0.2 and 2.9.4, Drupal to 8.0.2, eGroupware to 14.3.20160113, TikiWiki to 14.2, 12.5 and 6.15, and Typo3 to 6.2.17.
+Added support for automatic renewal of Let's Encrypt certificates.
